:lipstick: front de la premiere page

--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
 					d'une vengeance ? C'est à vous d'éclaircir la situation en incarnant 
 					le détective chargé de l'affaire !
 				</p>
+				<div class="link-container">
+					<a class="commencer-link" href=""><img src="img/play.svg" alt=""> Commencer</a>
+				</div>
 			</div>
-			
+		</div>
+		<div class="autres-projets">
+			<p>Les autres projets</p>
+			<a href="">Le lien</a>
 		</div>
 	</section>
 	<section class="container">
