--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					le détective chargé de l'affaire !
 				</p>
 				<div class="link-container">
-					<a class="commencer-link" href=""><img src="img/play.svg" alt=""> Commencer</a>
+					<a class="commencer-link" href="enquete.html"><img src="img/play.svg" alt=""> Commencer</a>
 				</div>
 			</div>
 		</div>
@@ -53,6 +53,5 @@
 	  </section>
 	  <button id="denoncer">Denoncer le gros vilain</button>
 	  
-	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
