:sparkles: le bouton denoncer avec les differents choix

--- a/enquete.html
+++ b/enquete.html
@@ -11,19 +11,23 @@
 <body>
 	
 	<section class="container">
-		<!-- <div class="denoncer-container">
-			<div>mechant</div>
-			<div>mechant</div>
-			<div>mechant</div>
-			<div>mechant</div>
-			<div>mechant</div>
-		</div> -->
+		<div class="denoncer-container">
+			<div class="choice1 different-choice">Elisabeth</div>
+			<div class="choice2 different-choice">Auguste</div>
+			<div class="choice3 different-choice">Diego</div>
+			<div class="choice4 different-choice">Le majordome</div>
+			<div class="choice5 different-choice">Camille</div>
+			<div class="choice6 different-choice">Le gardien<br> du musée</div>
+			<div class="choice7 different-choice">Le responsable<br> du musée</div>
+			<div class="choice8 different-choice"><img src="img/retour.svg" alt=""> Retour</div>
+		</div>
 		<!-- <h1>Vol au musée</h1>
 		<h2 id="title"></h2> -->
 		<video src="" id="player"></video>
 		<div class="choice-container">
 		  <div class="button choice"></div>
-		  <div class="button choice"></div>
+          <div class="button choice"></div>
+          <btn class="denoncer"><img src="img/denoncer.svg" alt=""> Dénoncer</a>
 		</div>
 	  </section>
 	  <!-- <button id="denoncer">Denoncer le gros vilain</button> -->
