:sparkle: add playinline attribute to video

--- a/enquete.html
+++ b/enquete.html
@@ -23,7 +23,7 @@
 		</div>
 		<!-- <h1>Vol au musée</h1>
 		<h2 id="title"></h2> -->
-		<video src="" id="player"></video>
+		<video playsinline  src="" id="player"></video>
 		<div class="choice-container">
 		  <div class="button choice"></div>
           <div class="button choice"></div>
