--- a/index.html
+++ b/index.html
@@ -1,58 +1,58 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;900&display=swap" rel="stylesheet">	
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;900&display=swap" rel="stylesheet">
 </head>
+
 <body>
-	<section class="accueil-container">
-		<img class="logo" src="img/logo-mmi.png" alt="Logo MMI">
-		<p class="projet-etudiant-paragraph made-by">Projet étudiant réalisé par </p>
-		<p class="projet-etudiant-paragraph">Yohann Tonnerre - Léo Philip - Matéo Roux - Samuel Agut - Vincent Soubabère - Mathis Chantereau</p>
-		<div class="intro-container">
-			<div class="intro-content-container">
-				<h1>VOL<br> AU<br> MUSÉE</h1>
-				<p class="enquete">2021 - Enquête - ≃10 min</p>
-				<p class="intro-paragraph">
-					Un tableau a été dérobé au musée des Beaux-arts de Bordeaux ! 
-					Une chevalière appartenant à la famille Challemel du Rozier 
-					a été retrouvé sur les lieux du vol. Est-ce le début d'une bonne 
-					piste ou au contraire, cet indice est un piège tendu dans le but 
-					d'une vengeance ? C'est à vous d'éclaircir la situation en incarnant 
-					le détective chargé de l'affaire !
-				</p>
-				<div class="link-container">
-					<a class="commencer-link" href=""><img src="img/play.svg" alt=""> Commencer</a>
-				</div>
-			</div>
-		</div>
-		<div class="autres-projets">
-			<p>Les autres projets</p>
-			<a href="">Le lien</a>
-		</div>
-	</section>
-	<section class="container">
-		<div class="denoncer-container">
-			<div>mechant</div>
-			<div>mechant</div>
-			<div>mechant</div>
-			<div>mechant</div>
-			<div>mechant</div>
-		</div>
-		<h1>Vol au musée</h1>
-		<h2 id="title"></h2>
-		<video src="" id="player"></video>
-		<div class="choice-container">
-		  <div class="button choice"></div>
-		  <div class="button choice"></div>
-		</div>
-	  </section>
-	  <button id="denoncer">Denoncer le gros vilain</button>
-	  
-	<script type="text/javascript" src="js/main.js"></script>
+    <section class="accueil-container">
+        <img class="logo" src="img/logo-mmi.png" alt="Logo MMI">
+        <p class="projet-etudiant-paragraph made-by">Projet étudiant réalisé par </p>
+        <p class="projet-etudiant-paragraph">Yohann Tonnerre - Léo Philip - Matéo Roux - Samuel Agut - Vincent Soubabère - Mathis Chantereau</p>
+        <div class="intro-container">
+            <div class="intro-content-container">
+                <h1>VOL<br> AU<br> MUSÉE</h1>
+                <p class="enquete">2021 - Enquête - ≃10 min</p>
+                <p class="intro-paragraph">
+                    Un tableau a été dérobé au musée des Beaux-arts de Bordeaux ! Une chevalière appartenant à la famille Challemel du Rozier a été retrouvé sur les lieux du vol. Est-ce le début d'une bonne piste ou au contraire, cet indice est un piège tendu dans le but
+                    d'une vengeance ? C'est à vous d'éclaircir la situation en incarnant le détective chargé de l'affaire !
+                </p>
+                <div class="link-container">
+                    <a class="commencer-link" href=""><img src="img/play.svg" alt=""> Commencer</a>
+                </div>
+            </div>
+        </div>
+        <div class="autres-projets">
+            <p>Les autres projets</p>
+            <a href="">Le lien</a>
+        </div>
+    </section>
+    <section class="container">
+        <div class="denoncer-container">
+            <div>mechant</div>
+            <div>mechant</div>
+            <div>mechant</div>
+            <div>mechant</div>
+            <div>mechant</div>
+        </div>
+        <h1>Vol au musée</h1>
+        <h2 id="title"></h2>
+        <video src="" id="player"></video>
+        <div class="choice-container">
+            <div class="button choice"></div>
+            <div class="button choice"></div>
+        </div>
+    </section>
+    <button id="denoncer">Denoncer le gros vilain</button>
+
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
+
 </html>
