:lipstick: les animations entres les differents panels

--- a/enquete.html
+++ b/enquete.html
@@ -27,6 +27,10 @@
         <!-- <h1>Vol au musée</h1>
 		<h2 id="title"></h2> -->
         <video playsinline src="" id="player"></video>
+        <div class="pause">
+            <div></div>
+            <div></div>
+        </div>
         <div class="choice-container">
             <div class="button choice"></div>
             <div class="button choice"></div>
