--- a/enquete.html
+++ b/enquete.html
@@ -27,6 +27,7 @@
         <!-- <h1>Vol au musée</h1>
 		<h2 id="title"></h2> -->
         <video playsinline src="" id="player"></video>
+        <div class="loader"></div>
         <div class="pause">
             <div></div>
             <div></div>
