:sparkle: ajout du lien vers le site reveville

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="autres-projets">
             <p>Les autres projets</p>
-            <a href="">Le lien</a>
+            <a target="_blank" href="https://reveville.mmibordeaux.com/">Le lien</a>
         </div>
     </section>
 
