--- a/enquete.html
+++ b/enquete.html
@@ -26,7 +26,7 @@
         </div>
         <!-- <h1>Vol au musée</h1>
 		<h2 id="title"></h2> -->
-        <video playsinline src="" id="player"></video>
+        <video autoplay playsinline src="" id="player"></video>
         <div class="loader"></div>
         <div class="pause">
             <div></div>
