tout est sur la meme page afin d eviter les problemes avec l autoplay des videos

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     d'une vengeance ? C'est à vous d'éclaircir la situation en incarnant le détective chargé de l'affaire !
                 </p>
                 <div class="link-container">
-                    <a class="commencer-link" href="enquete.html"><img src="img/play.svg" alt=""> Commencer</a>
+                    <button class="commencer-link"><img src="img/play.svg" alt=""> Commencer</button>
                 </div>
             </div>
         </div>
@@ -34,6 +34,36 @@
             <a target="_blank" href="https://reveville.mmibordeaux.com/">Le lien</a>
         </div>
     </section>
+
+    <section class="container">
+        <div class="denoncer-container">
+            <div class="choice1 different-choice">Elisabeth</div>
+            <div class="choice2 different-choice">Auguste</div>
+            <div class="choice3 different-choice">Diego</div>
+            <div class="choice4 different-choice">Le majordome</div>
+            <div class="choice5 different-choice">Camille</div>
+            <div class="choice6 different-choice">Le gardien<br> du musée</div>
+            <div class="choice7 different-choice">Le responsable<br> du musée</div>
+            <div class="choice8 different-choice"><img src="img/retour.svg" alt=""> Retour</div>
+        </div>
+        <!-- <h1>Vol au musée</h1>
+		<h2 id="title"></h2> -->
+        <video playsinline src="" id="player"></video>
+        <div class="skip">Passer la vidéo</div>
+        <div class="loader"></div>
+        <div class="pause">
+            <div></div>
+            <div></div>
+        </div>
+        <div class="choice-container">
+            <div class="button choice"></div>
+            <div class="button choice"></div>
+            <btn class="denoncer"><img src="img/denoncer.svg" alt=""> Dénoncer</a>
+        </div>
+    </section>
+    <!-- <button id="denoncer">Denoncer le gros vilain</button> -->
+
+    <script type="text/javascript" src="js/main.js"></script>
 
 
 </body>
