:sparkles: tout sur la meme page + l ecran de defaite + correction des bugs

--- a/index.html
+++ b/index.html
@@ -61,7 +61,26 @@
             <btn class="denoncer"><img src="img/denoncer.svg" alt=""> Dénoncer</a>
         </div>
     </section>
-    <!-- <button id="denoncer">Denoncer le gros vilain</button> -->
+    
+
+    <section class="accueil-container-play-again">
+        <img class="logo" src="img/logo-mmi.png" alt="Logo MMI">
+        <p class="projet-etudiant-paragraph made-by">Projet étudiant réalisé par </p>
+        <p class="projet-etudiant-paragraph">Yohann Tonnerre - Léo Philip - Matéo Roux - Samuel Agut - Vincent Soubabère - Mathis Chantereau</p>
+        <div class="intro-container">
+            <div class="intro-content-container">
+                <h1>LE<br> VOLEUR<br> VOUS <br> A <br> ECHAPPÉ</h1>
+                
+                <div class="link-container">
+                    <button class="rejouer-link"><img src="img/play.svg" alt=""> Rejouer</button>
+                </div>
+            </div>
+        </div>
+        <div class="autres-projets">
+            <p>Les autres projets</p>
+            <a target="_blank" href="https://reveville.mmibordeaux.com/">Le lien</a>
+        </div>
+    </section>
 
     <script type="text/javascript" src="js/main.js"></script>
 
