:lipstick: ajout de padding sur mobile pour les choix apres la video

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 <h1>VOL<br> AU<br> MUSÉE</h1>
                 <p class="enquete">2021 - Enquête - ≃10 min</p>
                 <p class="intro-paragraph">
-                    Un tableau a été dérobé au musée des Beaux-arts de Bordeaux ! Une chevalière appartenant à la famille Challemel du Rozier a été retrouvé sur les lieux du vol. Est-ce le début d'une bonne piste ou au contraire, cet indice est un piège tendu dans le but
+                    Un tableau a été dérobé au musée des Beaux-Arts de Bordeaux! Une chevalière appartenant à la famille Challemel du Rozier 
+                    a été retrouvé sur les lieux du vol. Est-ce le début d'une bonne piste ou au contraire un piège tendu dans le but
                     d'une vengeance ? C'est à vous d'éclaircir la situation en incarnant le détective chargé de l'affaire !
                 </p>
                 <div class="link-container">
