--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="enquete">2021 - Enquête - ≃10 min</p>
                 <p class="intro-paragraph">
                     Un tableau a été dérobé au musée des Beaux-Arts de Bordeaux! Une chevalière appartenant à la famille Challemel du Rozier 
-                    a été retrouvé sur les lieux du vol. Est-ce le début d'une bonne piste ou au contraire un piège tendu dans le but
+                    a été retrouvée sur les lieux du vol. Est-ce le début d'une bonne piste ou au contraire un piège tendu dans le but
                     d'une vengeance ? C'est à vous d'éclaircir la situation en incarnant le détective chargé de l'affaire !
                 </p>
                 <div class="link-container">
